--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "./src/server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "build": "npm install && npx tsc",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
